@@ -1,1 +1,4 @@
 mobac.mapsources.mappacks.region_europe_east.UmpWawPl
+mobac.mapsources.mappacks.region_europe_east.FreemapSlovakia
+mobac.mapsources.mappacks.region_europe_east.FreemapSlovakiaCycling
+mobac.mapsources.mappacks.region_europe_east.FreemapSlovakiaHiking
