@@ -14,6 +14,7 @@
  + [Nokia] Sports Tracker file extension changed to jpg (feature request #3066161)
  + Reactivated atlas format "TwoNav (RMAP)"
  + New map source: FAA Sectional Charts (aeromaps.us)
+ + Reactivated map sources Freemap.sk (Car atlas, Hiking map, Cycle map)
 
 1.9 beta 2 (2011-04-06)
  ! Custom atlas map source / locally generated tiles map source
